# BayesFlowTutorial

./: .gitignore  01_Linear_Regression_Exercise.ipynb  01_Linear_Regression_Solution.ipynb  02_SIR_Diagnostics_Exercise.ipynb  02_SIR_Diagnostics_Solution.ipynb  03_Diffusion_Guidance_Exercise.ipynb  03_Diffusion_Guidance_Solution.ipynb  README.md  pyproject.toml
