[project]
name = "bayesflowtutorial"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bayesflow>=2.0.12",
    "ipywidgets>=8.1.8",
    "jax>=0.10.2",
    "keras>=3.15.0",
    "matplotlib>=3.11.0",
    "numpy>=2.2.6",
    "pandas<3",
    "pyro-ppl>=1.9.1",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    # Not used by the tutorial, but needed for Colab
    "numba==0.65.1",
    "ipykernel>=7.3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
